--- a/domino/presentation.tex
+++ b/domino/presentation.tex
@@ -155,14 +155,25 @@
   Joint work with Louis Esperet and Ugo Giocanti.
 \end{frame}
 
+\begin{frame}{Goal of this talk}
+  \begin{exampleblock}{Overview and intuition on different objects}
+    \begin{itemize}
+    \item The domino problem
+    \item Infinite graphs with lots of symmetries
+    \item Tree-decompositions, treewidth and minors
+    \item A small bit of group theory
+    \end{itemize}
+  \end{exampleblock}
+\end{frame}
+
 \section*{Motivation: The domino problem}
 \begin{frame}{Wang's dominos}
 
-  \begin{block}{Wang's tiling problem}
+  \begin{exampleblock}{Wang's tiling problem}
   {\bf Entry:} A finite family of tiles $\mathcal{T}$\\
   {\bf Question:} Does there exist a tiling of $\mathbb{Z}^2$ using tiles of
   $\mathcal{T}$ ?
-  \end{block}
+  \end{exampleblock}
   \begin{columns}
     \begin{column}{.5\linewidth}
       \centering
@@ -974,11 +985,20 @@
 
 \section*{Back to the dominos}
 \begin{frame}{Domino conjecture on groups avoiding a minor}
-  
+  \begin{block}{Aubrun, Barbieri, Moutot 2019}
+  \end{block}
 \end{frame}
 
 \section*{Conclusion}
 \begin{frame}{Key ideas to take away}
+  \begin{itemize}
+  \item Among quasi-transitive graphs, planar graphs and graphs excluding a
+    minor are much alike
+  \item For a quasi-transitive graph, $K_\infty$-minor free $\Rightarrow$ $K_t$
+    minor free for some $t$
+  \end{itemize}
+
+  \vspace{1cm}
   \centering
   Thanks!
 \end{frame}
